--- a/React/react(useState)/src/index.css
+++ b/React/react(useState)/src/index.css
@@ -1,6 +1,6 @@
 .count{
     text-align: center;
-    font-family: sans-serif;
+    font-family: sans-serif 'Courier New', Courier, monospace;
     
 }
 .count-display{
